# agens

./: .gitattributes  .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  go.mod  go.sum  justfile  sqlc.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: verify.yml
cmd/agens/: main.go
crates/agens-cli/: Cargo.toml
crates/agens-cli/data/: models.dev-openai.json  models.dev-openai.json.sha256
crates/agens-cli/src/: chatgpt_auth.rs  lib.rs  main.rs  model_registry.rs
crates/agens-cli/tests/: cli.rs
crates/agens-config/: Cargo.toml
crates/agens-config/src/: lib.rs
crates/agens-config/tests/: config_fixtures.rs  config_paths.rs
crates/agens-core/: Cargo.toml
crates/agens-core/src/: lib.rs  request_config.rs
crates/agens-core/tests/: adapter_and_permission_patterns.rs  core_contracts.rs  headless_runtime.rs  request_config.rs  session_agent_contracts.rs  usage_events.rs
crates/agens-providers/: Cargo.toml
crates/agens-providers/src/: chatgpt_login.rs  lib.rs
crates/agens-providers/tests/: chatgpt_auth.rs  chatgpt_http.rs  chatgpt_login.rs  openai_http.rs  openai_stream.rs  provider_cancellation.rs
crates/agens-store/: Cargo.toml
crates/agens-store/src/: lib.rs  session_writer.rs
crates/agens-store/tests/: permission_grants.rs  schema_v3.rs  session_writer.rs  sessions.rs
crates/agens-tools/: Cargo.toml
crates/agens-tools/src/: agents.rs  capabilities.rs  http_mcp.rs  http_worker.rs  lib.rs  markdown.rs  mcp_status.rs  stdio_mcp.rs  task.rs
crates/agens-tools/tests/: extensions.rs  headless_cancellation_adapter.rs  mcp_transport.rs  native_tools.rs  permission_dispatch.rs  runtime_contracts.rs  skills.rs  stdio_mcp.rs  subagents.rs
crates/agens-tui/: Cargo.toml
crates/agens-tui/src/: app.rs  bridge.rs  conversation.rs  lib.rs  render.rs  terminal.rs
crates/agens-tui/tests/: events.rs  rendering.rs  terminal.rs
internal/agent/: agent.go  agent_test.go
internal/agentdef/: agentdef.go  agentdef_test.go  load.go  parse.go  save.go
internal/agentloop/: assemble.go  assemble_test.go  event.go  fakes_test.go  loop.go  loop_test.go  sink.go  sink_test.go  tool.go  tool_test.go
internal/app/: app.go
internal/auth/: auth.go  auth_test.go  path.go  path_test.go  save.go  save_test.go
internal/auth/chatgpt/: authenticator.go  browser.go  jwt.go  (+7 more)
internal/cli/: auth.go  auth_test.go  chat.go  chat_test.go  config.go  config_test.go  files.go  files_test.go  models.go  models_test.go  prompter.go  prompter_test.go  root.go  root_test.go  sessions.go  sessions_test.go  tui.go  tui_test.go
internal/command/: command.go  command_test.go
internal/config/: config.go  config_test.go  doctor.go  doctor_test.go  expand.go  expand_test.go  load.go  load_test.go  mcp_test.go  merge.go
internal/frontmatter/: frontmatter.go  frontmatter_test.go
internal/mcpclient/: client.go  client_test.go  transport.go  transport_test.go
internal/message/: json.go  json_test.go  message.go  message_test.go  part.go  part_test.go
internal/modelregistry/: enrich.go  enrich_test.go  registry.go  registry_test.go  snapshot.json
internal/permission/: bypass.go  bypass_test.go  conformance_test.go  engine.go  engine_test.go  gate.go  gate_durable_test.go  gate_test.go  matcher.go  matcher_test.go  prompter.go  prompter_test.go  rule.go  rule_test.go  store.go  store_test.go
internal/prompt/: environment.go  environment_test.go  instructions.go  instructions_test.go  prompt.go  prompt_test.go  select.go  select_test.go  skills.go  skills_test.go
internal/provider/: autherror.go  autherror_test.go  event.go  event_test.go  factory.go  factory_test.go  provider.go  provider_test.go  request.go  request_test.go
internal/session/: session.go  store.go  store_test.go
internal/skill/: load.go  parse.go  skill.go  skill_test.go  tool.go  tool_test.go
internal/tool/: registry.go  registry_test.go  run_test.go  tool.go
internal/tui/: agent_rotate.go  agent_rotate_test.go  agents.go  agents_test.go  ayu.json  ayu_style_test.go  bridge.go  bridge_test.go  bypass_test.go  commands.go  commands_running_test.go  commands_test.go  component.go  component_test.go  diffview.go  diffview_test.go  effort.go  errfmt.go  errfmt_test.go  files.go  files_test.go  input.go  input_test.go  messages.go  messages_test.go  mode.go  mode_test.go  models.go  models_test.go  mouse_test.go  permission.go  permission_test.go  queue_test.go  reasoning_effort_test.go  sessions.go  sessions_test.go  status.go  status_test.go  subagent.go  subagent_demo.go  (+14 more)
internal/version/: version.go  version_test.go
scripts/: check-target-budget.sh
tests/bootstrap/: assert-workspace.sh  docs-contract.sh  standards-contract.sh  target-budget.sh  verify-contracts.sh
(+66 files in other folders)
