[workspace]
members = [
  "crates/agens-core",
  "crates/agens-config",
  "crates/agens-providers",
  "crates/agens-tools",
  "crates/agens-store",
  "crates/agens-tui",
  "crates/agens-cli",
]
resolver = "3"
default-members = ["crates/agens-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
publish = false

[workspace.lints.rust]
unsafe_code = "allow"
unused_must_use = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
unwrap_in_result = "allow"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "allow"
