[package]
name = "agens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "agens"
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "agens"
path = "src/main.rs"

[[bin]]
name = "agens-cli-fake-mcp-child"
path = "../agens-tools/src/bin/fake-mcp-child.rs"

[dependencies]
agens-config = { path = "../agens-config" }
agens-core = { path = "../agens-core" }
agens-providers = { path = "../agens-providers" }
agens-store = { path = "../agens-store" }
agens-tools = { path = "../agens-tools" }
agens-tui = { path = "../agens-tui" }
toml = "0.8"
tokio = { version = "1", features = ["net", "rt", "signal", "time"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
libc = "0.2"

[dev-dependencies]
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
