[package]
name = "agens-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agens-config = { path = "../agens-config" }
agens-core = { path = "../agens-core" }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
ureq = { version = "3", features = ["json"] }
