[package]
name = "agens-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agens-config = { path = "../agens-config" }
agens-core = { path = "../agens-core" }
fs4 = "0.13"
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt", "time"] }
