[package]
name = "agens-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agens-config = { path = "../agens-config" }
agens-core = { path = "../agens-core" }
base64 = "0.22"
fs4 = "0.13"
libc = "0.2"
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt", "time"] }
url = "2"
