[package]
name = "agens-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
agens-config = { path = "../agens-config" }
agens-core = { path = "../agens-core" }
libc = "0.2"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
serde_json = "1"
