[package]
name = "agens-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
agens-config = { path = "../agens-config" }
agens-core = { path = "../agens-core" }
globset = "0.4"
libc = "0.2"
regex = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
serde_json = "1"
