[package]
name = "agens-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
agens-core = { path = "../agens-core" }
crossterm = "0.29"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
